# test

./: README.md
lab2/: CMakeLists.txt  README.md
lab2/src/: Four.cpp  Four.h  main.cpp
lab2/tests/: FourTests.cpp
